feat: Test cases for crud label
