# routes/users.js
@@ -9,7 +9,9 @@
 const helper = require("../middleware/helper");
 const controller = require('../controllers/user');
 const note= require('../controllers/notes');
-const LabelController = require('../controllers/label');
+// const LabelController = require('../controllers/label');
+const noteController = require('../controllers/notes');
+const labelController = require('../controllers/label');
 module.exports = (app) => {
     
     //api for registration
@@ -24,25 +26,53 @@ module.exports = (app) => {
      //api for Reset pasword
      app.put('/resetPassword', controller.resetPassword);
 
-     // CRUD  for Notes
-     app.post('/notes', helper.verifyingToken, note.createNote);
+   
+  //notes CRUD api
+  app.post('/createNotes', helper.verifyingToken, noteController.createNotes);
 
-     app.put('/notes/:noteId', helper.verifyingToken, note.updateNote);
+  app.get('/notes/:notes', helper.verifyingToken, noteController.getAllNotes);
+
+  app.put('/note/:notesId',  helper.verifyingToken, noteController.updateNotesById);
+
+  app.delete('/delete/:notesId', helper.verifyingToken, noteController.deleteNotesById);
+
+  //label CRUD api
+  app.post('/createLabel/:userId',  helper.verifyingToken, labelController.createLabel);
+
+  app.get('/labels/:labels',  helper.verifyingToken, labelController.getAllLabels);
+
+  app.get('/label/:labelId',  helper.verifyingToken, labelController.getLabelById);
+
+  app.put('/updateLabel/:labelId',  helper.verifyingToken, labelController.updateLabelById);
+
+  app.delete('/deleteLabel/:labelId',  helper.verifyingToken, labelController.deleteLabelById);
+
+  //label to note api 
+  app.put('/addLabel',  helper.verifyingToken, noteController.addLabelToNote);
+
+  app.delete('/deleteLabel',  helper.verifyingToken, noteController.deleteLabelFromNote);
+
  
-     app.get('/notes', helper.verifyingToken,  note.retrieveNote);
+
+    //  // CRUD  for Notes
+    //  app.post('/notes', helper.verifyingToken, note.createNote);
+
+    //  app.put('/notes/:noteId', helper.verifyingToken, note.updateNote);
  
-     app.delete('/notes/:noteId', helper.verifyingToken, note.deleteNote);
+    //  app.get('/notes', helper.verifyingToken,  note.retrieveNote);
+ 
+    //  app.delete('/notes/:noteId', helper.verifyingToken, note.deleteNote);
     
-     app.post('/addLabelToNote', helper.verifyingToken, note.addLabelToNote)
-     //  label CRUD operation
+    //  app.post('/addLabelToNote', helper.verifyingToken, note.addLabelToNote)
+    //  //  label CRUD operation
 
-     app.post('/label', helper.verifyToken, LabelController.createLabel);
+    //  app.post('/label', helper.verifyToken, LabelController.createLabel);
 
-    app.put('/label/:labelId', helper.verifyToken, LabelController.updateLabel);
+    // app.put('/label/:labelId', helper.verifyToken, LabelController.updateLabel);
 
-    app.get('/label', helper.verifyToken, LabelController.retrieveLabels);
+    // app.get('/label', helper.verifyToken, LabelController.retrieveLabels);
 
-    app.delete('/label/:labelId', helper.verifyToken, LabelController.deleteLabel);
+    // app.delete('/label/:labelId', helper.verifyToken, LabelController.deleteLabel);
 
     }
 
